# midas-journal-111

__MACOSX/: ._itkCorrespondences
__MACOSX/itkCorrespondences/: ._CMakeLists.txt  ._CMakeTemplate.txt  ._IJMacros.txt  ._ImageCompare.cxx  ._Readme-license.txt  ._itkConformalSphericalParameterizationFilter.h  ._itkConformalSphericalParameterizationFilter.txx  ._itkConformalSphericalParameterizationFilter.txx.bak  ._itkGaussianWarpSphericalParameterizationFilter.h  ._itkGaussianWarpSphericalParameterizationFilter.txx  ._itkGaussianWarpSphericalParameterizationFilter.txx.bak  ._itkIndexedTriangleMesh.h  ._itkIndexedTriangleMesh.txx  ._itkIndexedTriangleMesh.txx.bak  ._itkMeshASCIIReader.h  ._itkMeshASCIIReader.txx  ._itkMeshASCIIWriter.h  ._itkMeshDataSpecialization.h  ._itkMeshFileWriter.h  ._itkMeshSTLWriter.h  ._itkParameterizedMeshASCIIReader.h  ._itkParameterizedMeshASCIIReader.txx  ._itkParameterizedMeshASCIIWriter.h  ._itkParameterizedTriangleMesh.h  ._itkParameterizedTriangleMesh.h.bak  ._itkParameterizedTriangleMesh.txx  ._itkProcrustesAlign3DMeshFilter.h  ._itkProcrustesAlign3DMeshFilter.txx  ._itkRemeshParameterizedMeshFilter.h  ._itkRemeshParameterizedMeshFilter.txx  ._itkRemeshParameterizedMeshFilter.txx.bak  ._itkRotateSphericalParameterizationFilter.h  ._itkRotateSphericalParameterizationFilter.txx  ._itkRotateSphericalParameterizationFilter.txx.bak  ._itkShapeModelCalculatorCostFunction.h  ._itkShapeModelCalculatorCostFunction.txx  ._itkSimplifiedMDLCostFunction.h  ._itkSimplifiedMDLCostFunction.txx  ._itkSphericalParameterizedTriangleMesh.h  ._itkSphericalParameterizedTriangleMesh.h.bak  (+8 more)
itkCorrespondences/: CMakeLists.txt  CMakeTemplate.txt  Readme-license.txt  itkConformalSphericalParameterizationFilter.h  itkConformalSphericalParameterizationFilter.txx  itkConformalSphericalParameterizationFilter.txx.bak  itkGaussianWarpSphericalParameterizationFilter.h  itkGaussianWarpSphericalParameterizationFilter.txx  itkGaussianWarpSphericalParameterizationFilter.txx.bak  itkIndexedTriangleMesh.h  itkIndexedTriangleMesh.txx  itkIndexedTriangleMesh.txx.bak  itkMeshASCIIReader.h  itkMeshASCIIReader.txx  itkMeshASCIIWriter.h  itkMeshDataSpecialization.h  itkMeshFileWriter.h  itkMeshSTLWriter.h  itkParameterizedMeshASCIIReader.h  itkParameterizedMeshASCIIReader.txx  itkParameterizedMeshASCIIWriter.h  itkParameterizedTriangleMesh.h  itkParameterizedTriangleMesh.h.bak  itkParameterizedTriangleMesh.txx  itkProcrustesAlign3DMeshFilter.h  itkProcrustesAlign3DMeshFilter.txx  itkRemeshParameterizedMeshFilter.h  itkRemeshParameterizedMeshFilter.txx  itkRemeshParameterizedMeshFilter.txx.bak  itkRotateSphericalParameterizationFilter.h  itkRotateSphericalParameterizationFilter.txx  itkRotateSphericalParameterizationFilter.txx.bak  itkShapeModelCalculatorCostFunction.h  itkShapeModelCalculatorCostFunction.txx  itkSimplifiedMDLCostFunction.h  itkSimplifiedMDLCostFunction.txx  itkSphericalParameterizedTriangleMesh.h  itkSphericalParameterizedTriangleMesh.h.bak  itkSphericalParameterizedTriangleMesh.txx  itkStatisticalShapeModel3DCalculator.h  (+6 more)
